@@ -384,7 +384,8 @@ public:
         ham_env_create(&m_env, BFC_OPATH(".test"),
             HAM_ENABLE_RECOVERY | HAM_ENABLE_TRANSACTIONS, 0664, 0));
     BFC_ASSERT_EQUAL(0,
-        ham_env_create_db(m_env, &m_db, 13, HAM_ENABLE_DUPLICATES, 0));
+        ham_env_create_db(m_env, &m_db, 13,
+            HAM_ENABLE_DUPLICATES | HAM_ENABLE_EXTENDED_KEYS, 0));
     BFC_ASSERT_EQUAL(0, ham_txn_begin(&m_txn, m_env, 0, 0, 0));
     BFC_ASSERT_EQUAL(0, createCursor(&m_cursor));
   }
