@@ -1,3 +1,7 @@
+Jan 04, 2013 - chris ---------------------------------------------------
+o Extended keys are now disabled by default; use HAM_ENABLE_EXTENDED_KEYS to
+	enable them
+
 Dec 26, 2012 - chris ---------------------------------------------------
 o In-Memory Environments now support Transactions
 
